FullQa New/src/PFLSwagIQ/objects/SwagIQ_Order__c.object
<CustomObject>
    <description>To see the status and order details of SwagIQ orders at any time</description>
    <fields>
        <fullName>API_Key__c</fullName>
        <label>Store ID</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>SwagIQ Order</relationshipLabel>
        <relationshipName>SwagIQ_Order</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Company_Name__c</fullName>
        <formula>IF(Contact__c != null , Contact__r.Account.Name ,  Lead__r.Company )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Company Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>To store the Contact to whom the swag is to be send</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>SwagIQ Order</relationshipLabel>
        <relationshipName>SwagIQ_Order</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cost__c</fullName>
        <label>Total Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Date_Delivered__c</fullName>
        <description>The datetime at which product was delivered</description>
        <label>Date Delivered</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Ordered_DateTime__c</fullName>
        <description>DateTime at which the product was ordered</description>
        <label>Date Time Ordered</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Ordered__c</fullName>
        <description>Date at which the product was ordered</description>
        <label>Date Ordered</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Shipped_DateTime__c</fullName>
        <description>The date time at which the product was shipped</description>
        <label>Date Time Shipped</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Shipped__c</fullName>
        <description>The date at which the product was shipped</description>
        <label>Date Shipped</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Error_Message__c</fullName>
        <label>Error Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gift_Id__c</fullName>
        <label>Gift Id</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Gift_Info__c</fullName>
        <formula>HYPERLINK(LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260)) + Id, SwagIQ_Product__c ,&quot;_top&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gift Info</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gift_Sender_City__c</fullName>
        <label>Gift Sender City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gift_Sender_Company__c</fullName>
        <label>Gift Sender Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gift_Sender_Country__c</fullName>
        <label>Gift Sender Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gift_Sender_Email__c</fullName>
        <label>Gift Sender Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Gift_Sender_First_Name__c</fullName>
        <label>Gift Sender First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gift_Sender_Last_Name__c</fullName>
        <label>Gift Sender Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gift_Sender_Phone__c</fullName>
        <label>Gift Sender Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Gift_Sender_Postal_Code__c</fullName>
        <label>Gift Sender Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gift_Sender_State__c</fullName>
        <label>Gift Sender State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gift_Sender_Street_Address__c</fullName>
        <label>Gift Sender Street Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gift_Sender_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Gift Sender User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>SwagIQ_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Internal_Error_Message__c</fullName>
        <label>Internal Error Message</label>
        <length>8000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>To store the Lead to whom the swag is to be send</description>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>SwagIQ Order</relationshipLabel>
        <relationshipName>SwagIQ_Order</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Number_SwagIQ_Orders__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number SwagIQ Orders</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>SwagIQ Order</relationshipLabel>
        <relationshipName>SwagIQ_Order</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order_Detail__c</fullName>
        <formula>IF( ISBLANK(Tracking_URL__c ) ,  Error_Message__c ,  HYPERLINK( Tracking_URL__c , Tracking_URL__c, &quot;_blank&quot;) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Order Detail</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Number__c</fullName>
        <label>Order Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ordered_By_Me__c</fullName>
        <formula>IF( Ordered_By__c = $User.Id ,true,false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ordered By Me</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ordered_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ordered By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>SwagIQ_Order</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <description>To store the reason for which the swag was sent</description>
        <label>Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Recipient_City__c</fullName>
        <label>Recipient City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recipient_Country__c</fullName>
        <label>Recipient Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recipient_Email__c</fullName>
        <label>Recipient Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Recipient_First_Name__c</fullName>
        <label>Recipient First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recipient_Last_Name__c</fullName>
        <label>Recipient Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recipient_Phone__c</fullName>
        <label>Recipient Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Recipient_Postal_Code__c</fullName>
        <label>Recipient Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recipient_State__c</fullName>
        <label>Recipient State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recipient_Street_Address__c</fullName>
        <label>Recipient Street Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recipient__c</fullName>
        <formula>IF( Contact__r.Id  &lt;&gt; null , HYPERLINK(LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260))
+ Contact__r.Id ,  Contact__r.FirstName+&apos; &apos;+ Contact__r.LastName, &quot;_top&quot;  )  , HYPERLINK(LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260)) + Lead__r.Id ,Lead__r.FirstName+&apos; &apos;+ Lead__r.LastName, &quot;_top&quot; ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Recipient</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RuleID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RuleID</label>
        <referenceTo>Rule__c</referenceTo>
        <relationshipLabel>SwagIQ Orders</relationshipLabel>
        <relationshipName>SwagIQ_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Send_Mechanism__c</fullName>
        <label>Send Mechanism</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Signed_By__c</fullName>
        <description>The name of user who signed for SwagIQ order</description>
        <label>Signed By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Delivered</fullName>
                </value>
                <value>
                    <fullName>Order Confirmed</fullName>
                </value>
                <value>
                    <fullName>Shipped</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SwagIQ_Product__c</fullName>
        <description>To store the product name to be send</description>
        <label>SwagIQ Product</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TaskID__c</fullName>
        <label>TaskID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tracking_Link__c</fullName>
        <formula>HYPERLINK(  Tracking_URL__c , Tracking_URL__c, &quot;_blank&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tracking Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tracking_Number__c</fullName>
        <description>It is used only to store Tracking Number</description>
        <label>Tracking Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tracking_URL__c</fullName>
        <description>To link to the tracking site</description>
        <label>Tracking URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Truncated_Fields_Message__c</fullName>
        <description>Shows which recipient/sender fields were truncated</description>
        <inlineHelpText>This is readonly field</inlineHelpText>
        <label>Truncated Fields Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>SwagIQ Order</label>
    <listViews>
        <fullName>All1</fullName>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Date_Delivered__c</columns>
        <columns>Gift_Info__c</columns>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Recipient__c</columns>
        <columns>Status__c</columns>
        <columns>Opportunity__c</columns>
        <filterScope>Everything</filterScope>
        <label>Jessica&apos;s Swag View</label>
    </listViews>
    <listViews>
        <fullName>All_SwagIQ_Orders</fullName>
        <columns>NAME</columns>
        <columns>Recipient__c</columns>
        <columns>Gift_Info__c</columns>
        <columns>Ordered_By__c</columns>
        <columns>Date_Ordered__c</columns>
        <columns>Date_Shipped__c</columns>
        <columns>Date_Delivered__c</columns>
        <columns>Tracking_Number__c</columns>
        <columns>Reason__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All SwagIQ Orders</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>My_SwagIQ_Orders</fullName>
        <columns>NAME</columns>
        <columns>Recipient__c</columns>
        <columns>Gift_Info__c</columns>
        <columns>Ordered_By__c</columns>
        <columns>Date_Ordered__c</columns>
        <columns>Date_Shipped__c</columns>
        <columns>Date_Delivered__c</columns>
        <columns>Tracking_Number__c</columns>
        <columns>Reason__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Ordered_By_Me__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My SwagIQ Orders</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SwagIQ Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>